aws/projects/101-kittens-carousel-static-website-ec2/cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformation Template for Kittens Carousel Static WebSite on EC2. 
  This template deploys Kittens Carousel Static Website on Amazon Linux 2 EC2 Instance 
  with custom security group allowing HTTP connections on port 80.
  Kittens Carousel Static WebSite is downloaded from GitHub repository, 
  then deployed on Apache Web Server.
  
  

Resources:
  WebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and ssh for terminal
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-0c94855ba95c71c99
      InstanceType: t2.micro
      KeyName: waltman_aws_es2
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name 
          Value: !Sub Web Server of ${AWS::StackName} Stack 
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install -y httpd
            DATE_TIME=`date`
            cd /var/www/html
            wget https://raw.githubusercontent.com/E2049-Kaan/Clarusway-aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
            wget https://raw.githubusercontent.com/E2049-Kaan/Clarusway-aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/E2049-Kaan/Clarusway-aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/E2049-Kaan/Clarusway-aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
            systemctl start httpd
            systemctl enable httpd
  
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
